# hyperdots_installer

./: Cargo.toml  PKGBUILD  README.md  app_list.toml  custom_hypr.lst  deps.toml  dhat.out.7405  list.txt  test.sh
src/: cli.rs  conf.rs  installer.rs  main.rs  menu.rs  utils.rs
src/aur/: mod.rs
~/.cache/hyprdots/: custom_hypr.lst
