[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.5.1"
config = "0.14.0"
copy_dir = "0.1.3"
crossbeam = "0.8.4"
curl = "0.4.46"
env_logger = "0.11.3"
flate2 = "1.0.28"
futures = "0.3.30"
git = "0.3.0"
home = "0.5.9"
image = "0.25.0"
itertools = "0.12.1"
log = "0.4.21"
pipette = "0.1.0"
rayon = "1.9.0"
reedline = "0.30.0"
regex = "1.10.4"
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
smol = "2.0.0"
tailcall = "1.0.1"
tap = "1.0.1"
tar = "0.4.40"
termcolor = "1.4.1"
time = "0.3.34"
toml = "0.8.12"
ureq = "2.9.6"
walkdir = "2.5.0"
