[package]
name = "installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "3.0.5"
argparse = "0.2.2"
cell = "0.1.8"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.5.1"
config = "0.14.0"
copy_dir = "0.1.3"
crossbeam = "0.8.4"
curl = "0.4.46"
dotenv = "0.15.0"
dotenvy = "0.15.7"
env_logger = "0.11.3"
flate2 = "1.0.28"
flexi_logger = "0.28.0"
futures = "0.3.30"
home = "0.5.9"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.19.0"
pipette = "0.1.0"
rayon = "1.9.0"
reedline = "0.30.0"
regex = "1.10.4"
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
std-logger = "0.5.3"
structured-logger = "1.0.3"
tailcall = "1.0.1"
tap = "1.0.1"
tar = "0.4.40"
termcolor = "1.4.1"
time = "0.3.34"
toml = "0.8.12"
walkdir = "2.5.0"
zip = "0.6.6"
